--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "npx eslint ./src/ --fix && prettier ./src --write",
-    "document": "npx typedoc ./src/index.mts --includeVersion --plugin typedoc-plugin-missing-exports --excludeExternals true --internalModule INTERNAL" ,
+    "document": "npx typedoc ./src/index.mts --includeVersion --plugin typedoc-plugin-missing-exports --excludeExternals true --internalModule internal" ,
     "test": "vitest"
   },
   "keywords": [
