--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "lint": "npx eslint ./src/ --fix && prettier ./src --write",
-    "document": "npx typedoc ./src/index.mts --includeVersion --plugin typedoc-plugin-missing-exports --excludeExternals true --internalModule internal" ,
+    "document": "npx typedoc ./src/index.mts --includeVersion --plugin typedoc-plugin-missing-exports --excludeExternals true --internalModule internal",
     "test": "vitest"
   },
   "keywords": [
@@ -20,6 +20,8 @@
   "author": "bombitmanbomb",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.11.1",
     "@types/node": "20.16.10",
     "@typescript-eslint/eslint-plugin": "8.7.0",
     "@typescript-eslint/parser": "8.7.0",
